@@ -32,6 +32,7 @@ RPM_LDADD = \
 pkgincdir = $(pkgincludedir)
 pkginc_HEADERS = \
 	argv.h envvar.h fts.h mire.h rpmdav.h rpmhash.h \
+	rpmio-stub.h \
 	rpmio.h rpmurl.h rpmmacro.h rpmlog.h rpmmessages.h rpmerr.h rpmpgp.h \
 	rpmsq.h rpmsw.h ugid.h
 noinst_HEADERS = \
@@ -45,6 +46,7 @@ librpmio_la_SOURCES = \
 	argv.c digest.c fts.c getpass.c macro.c mire.c \
 	md2.c md4.c rmd128.c rmd160.c rmd256.c rmd320.c sha224.c \
 	salsa10.c salsa20.c tiger.c \
+	rpmio-stub.c \
 	rpmdav.c rpmhash.c rpmhook.c rpmio.c rpmlog.c rpmlua.c rpmmalloc.c \
 	rpmpgp.c rpmrpc.c rpmsq.c rpmsw.c strcasecmp.c strtolocale.c \
 	url.c ugid.c \
