@@ -2,6 +2,7 @@ LIBRPMIO_0
 {
   global:
     Access;
+    _Access;
     addMacro;
     argiAdd;
     argiCount;
@@ -26,9 +27,15 @@ LIBRPMIO_0
     avReaddir;
     bzdio;
     Chdir;
+    _Chdir;
     Chmod;
+    _Chmod;
     Chown;
+    _Chown;
     Chroot;
+    _Chroot;
+    Closedir;
+    _Closedir;
     davClose;
     davClosedir;
     _dav_debug;
@@ -50,23 +57,33 @@ LIBRPMIO_0
     delMacro;
     expandMacros;
     Fclose;
+    _Fclose;
     Fcntl;
+    _Fcntl;
     fdDup;
     fdFgets;
     fdio;
     Fdopen;
+    _Fdopen;
     fdReadable;
     fdSize;
     fdWritable;
     Ferror;
+    _Ferror;
     Fflush;
+    _Fflush;
     Fileno;
+    _Fileno;
     _fini;
     Fopen;
+    _Fopen;
     fpio;
     Fread;
+    _Fread;
     Fseek;
+    _Fseek;
     Fstrerror;
+    _Fstrerror;
     ftpCmd;
     _ftp_debug;
     ftpOpen;
@@ -78,13 +95,18 @@ LIBRPMIO_0
     Fts_read;
     Fts_set;
     Fwrite;
+    _Fwrite;
     Getpass;
     _GetPass;
     gidToGname;
     Glob;
+    _Glob;
     Glob_error;
+    _Glob_error;
     Globfree;
+    _Globfree;
     Glob_pattern_p;
+    _Glob_pattern_p;
     gnameToGid;
     gzdio;
     htAddEntry;
@@ -95,9 +117,13 @@ LIBRPMIO_0
     _init;
     isCompressed;
     Lchown;
+    _Lchown;
     Link;
+    _Link;
     Lseek;
+    _Lseek;
     Lstat;
+    _Lstat;
     lzdio;
     max_macro_depth;
     _mire_debug;
@@ -107,10 +133,14 @@ LIBRPMIO_0
     mireRegexec;
     mireRegcomp;
     Mkdir;
+    _Mkdir;
     Mkfifo;
+    _Mkfifo;
     Mknod;
+    _Mknod;
     noLibio;
     Opendir;
+    _Opendir;
     pgpArmorKeyTbl;
     pgpArmorTbl;
     pgpArmorWrap;
@@ -142,10 +172,14 @@ LIBRPMIO_0
     prpsoffsets32;
     prpsoffsets64;
     Readdir;
+    _Readdir;
     Readlink;
+    _Readlink;
     Rename;
+    _Rename;
     _RequestPass;
     Rmdir;
+    _Rmdir;
     rpmCleanPath;
     rpmCLIMacroContext;
     rpmDefineMacro;
@@ -242,7 +276,9 @@ LIBRPMIO_0
     rpmswNow;
     rpmswSub;
     Stat;
+    _Stat;
     Symlink;
+    _Symlink;
     ufdClose;
     ufdCopy;
     ufdGetFile;
@@ -251,6 +287,7 @@ LIBRPMIO_0
     uidToUname;
     unameToUid;
     Unlink;
+    _Unlink;
     _url_cache;
     _url_count;
     _url_debug;
@@ -263,7 +300,9 @@ LIBRPMIO_0
     urlSplit;
     urlStrerror;
     Utime;
+    _Utime;
     Utimes;
+    _Utimes;
     vmefail;
     xstrcasecmp;
     xstrncasecmp;
